<resources>
    <string name="app_name">Fluent GPT</string>
    <string name="input_subject_placeholder">Enter a subject to speak in English</string>
    <string name="button_subject">START CONVERSATION</string>
    <string name="list_conversation_title">CONVERSATIONS</string>
    <string name="title_conversation">Lorem</string>
    <string name="last_message">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="placeholder_text_conversation">Write a message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_conversation">Conversation</string>
    <string name="menu_routine">Routine</string>
    <string name="menu_settings">Settings</string>
    <string name="title_settings_page">General</string>
    <string name="language_text">App Language</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="study_routine">Study Routine</string>
    <string name="monday">Monday</string>
    <string name="read_text_english">Read a text in English</string>
    <string name="tuesday">Tuesday</string>
    <string name="chat_with_chat">Chat with our chat about Monday\'s text</string>
    <string name="wednesday">Wednesday</string>
    <string name="listen_audio">Listen to an audio</string>
    <string name="thursday">Thursday</string>
    <string name="talk_wed_audio">Talk about Wednesday audio</string>
    <string name="friday">Friday</string>
    <string name="study_grammer">Study a grammar rule</string>
    <string name="progress">Progress</string>
    <string name="weeks_done">8 weeks done!</string>
</resources>