<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <!-- Título "General" -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_settings_page"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:padding="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            />

        <LinearLayout
            android:id="@+id/languageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_marginTop="24dp"
            android:background="@drawable/corner_settings"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:orientation="vertical"
            android:padding="20dp">
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/languageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/languageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/themeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/themeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:checked="false"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</FrameLayout>